Initial polymer 1.0 release

--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,25 @@
 {
   "name": "uqlibrary-papercut",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "keywords": [
     "seed",
     "polymer",
     "web-components"
   ],
   "private": true,
-  "main": "uqlibrary-papercut.html",
+  "main": "elements/uqlibrary-papercut.html",
   "dependencies": {
-    "uqlibrary-elements": "uqlibrary/uqlibrary-elements#master"
+    "iron-elements": "PolymerElements/iron-elements#^1.0.8",
+    "paper-elements": "PolymerElements/paper-elements#^1.0.7",
+    "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
+    "polymer": "Polymer/polymer#^1.3.1",
+    "uqlibrary-styles": "uqlibrary/uqlibrary-styles",
+    "uqlibrary-ga": "uqlibrary/uqlibrary-ga#^1.0.0",
+    "uqlibrary-api": "uqlibrary/uqlibrary-api#polymer1.0",
+    "moment": "^2.12.0"
+  },
+  "devDependencies": {
+    "web-component-tester": "^4.2.2",
+    "test-fixture": "PolymerElements/test-fixture#^1.1.0"
   }
 }
