--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "uqlibrary-borrowing",
+  "name": "uqlibrary-papercut",
   "version": "1.0.0",
   "keywords": [
     "seed",
@@ -7,19 +7,19 @@
     "web-components"
   ],
   "private": true,
-  "main": "elements/uqlibrary-borrowing.html",
+  "main": "elements/uqlibrary-papercut.html",
   "dependencies": {
-    "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
     "iron-elements": "PolymerElements/iron-elements#^1.0.8",
-    "moment": "^2.12.0",
     "paper-elements": "PolymerElements/paper-elements#^1.0.7",
+    "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
     "polymer": "Polymer/polymer#^1.3.1",
-    "uqlibrary-api": "uqlibrary/uqlibrary-api#polymer1.0",
+    "uqlibrary-styles": "uqlibrary/uqlibrary-styles",
     "uqlibrary-ga": "uqlibrary/uqlibrary-ga#^1.0.0",
-    "uqlibrary-styles": "uqlibrary/uqlibrary-styles"
+    "uqlibrary-api": "uqlibrary/uqlibrary-api#polymer1.0",
+    "moment": "^2.12.0"
   },
   "devDependencies": {
-    "test-fixture": "PolymerElements/test-fixture#^1.1.0",
-    "web-component-tester": "^4.2.2"
+    "web-component-tester": "^4.2.2",
+    "test-fixture": "PolymerElements/test-fixture#^1.1.0"
   }
 }
