--- a/bower.json
+++ b/bower.json
@@ -12,10 +12,10 @@
     "iron-elements": "PolymerElements/iron-elements#^1.0.8",
     "paper-elements": "PolymerElements/paper-elements#^1.0.7",
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
-    "polymer": "Polymer/polymer#^1.3.1",
+    "polymer": "Polymer/polymer#^1.4",
     "uqlibrary-styles": "uqlibrary/uqlibrary-styles",
-    "uqlibrary-ga": "uqlibrary/uqlibrary-ga#^1.0.0",
-    "uqlibrary-api": "uqlibrary/uqlibrary-api#polymer1.0",
+    "uqlibrary-ga": "uqlibrary/uqlibrary-ga#^1.0.3",
+    "uqlibrary-api": "uqlibrary/uqlibrary-api#v1.0.5",
     "moment": "^2.12.0"
   },
   "devDependencies": {
