--- a/bower.json
+++ b/bower.json
@@ -12,14 +12,17 @@
     "iron-elements": "PolymerElements/iron-elements#^1.0.8",
     "paper-elements": "PolymerElements/paper-elements#^1.0.7",
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
-    "polymer": "Polymer/polymer#^1.4",
+    "polymer": "Polymer/polymer#^1.9.3",
     "uqlibrary-styles": "uqlibrary/uqlibrary-styles",
-    "uqlibrary-ga": "uqlibrary/uqlibrary-ga#^1.0.3",
-    "uqlibrary-api": "uqlibrary/uqlibrary-api#v1.0.5",
+    "uqlibrary-ga": "uqlibrary/uqlibrary-ga",
+    "uqlibrary-api": "uqlibrary/uqlibrary-api",
     "moment": "^2.12.0"
   },
   "devDependencies": {
-    "web-component-tester": "^4.2.2",
-    "test-fixture": "PolymerElements/test-fixture#^1.1.0"
+    "web-component-tester": "*",
+    "test-fixture": "PolymerElements/test-fixture#^1.1.2"
+  },
+  "resolutions": {
+    "test-fixture": "^1.1.2"
   }
 }
