--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "uqlibrary-styles": "uqlibrary/uqlibrary-styles",
     "uqlibrary-ga": "uqlibrary/uqlibrary-ga",
     "uqlibrary-api": "uqlibrary/uqlibrary-api",
-    "moment": "^2.12.0"
+    "moment": "^2.12.0",
+    "byutv-jsonp": "^1.3.1"
   },
   "devDependencies": {
     "web-component-tester": "*",
