Revert "Add required dependency"
The package is a dependency of uqlibrary-api, so doesn't need to be in this one.
This reverts commit 8b19efdeb57342287482ad243678d593e94c714c.

--- a/bower.json
+++ b/bower.json
@@ -16,8 +16,7 @@
     "uqlibrary-styles": "uqlibrary/uqlibrary-styles",
     "uqlibrary-ga": "uqlibrary/uqlibrary-ga",
     "uqlibrary-api": "uqlibrary/uqlibrary-api",
-    "moment": "^2.12.0",
-    "byutv-jsonp": "^1.3.1"
+    "moment": "^2.12.0"
   },
   "devDependencies": {
     "web-component-tester": "*",
