--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "engine-strict": true,
   "dependencies": {
-    "moment": "^2.12.0"
+    "lodash": "^4.17.15",
+    "moment": "^2.19.3"
   }
 }
