security update [PT #167659453]

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "engine-strict": true,
   "dependencies": {
     "lodash": "^4.17.15",
+    "lodash.template": "^4.5.0",
     "moment": "^2.19.3"
   }
 }
